--- a/assets/scss/app/app.scss
+++ b/assets/scss/app/app.scss
@@ -7,3 +7,4 @@
 @import 'elements/front-investorzone.scss';
 @import 'elements/front-contact.scss';
 @import 'elements/footer.scss';
+@import 'elements/single-inv.scss';
