add filters and others

--- a/assets/scss/app/app.scss
+++ b/assets/scss/app/app.scss
@@ -8,3 +8,8 @@
 @import 'elements/front-contact.scss';
 @import 'elements/footer.scss';
 @import 'elements/single-inv.scss';
+@import 'elements/template-news.scss';
+@import 'elements/aboutus.scss';
+@import 'elements/projects.scss';
+@import 'elements/zone.scss';
+@import 'elements/contact.scss';
