--- a/assets/scss/app/elements/_front-newestinv.scss
+++ b/assets/scss/app/elements/_front-newestinv.scss
@@ -3,7 +3,7 @@
     background: #F6F6F8;
 
     @media (max-width: 450px) {
-        margin-top:30px;
+        margin-top: 30px;
     }
 
     &__container {
@@ -11,8 +11,10 @@
         margin-left: auto;
         margin-right: auto;
     }
+
     &__header {
         padding-top: 134px;
+
         h3 {
             font-size: 48px;
             text-transform: uppercase;
@@ -30,35 +32,41 @@
             color: #7B7C8E;
             font-size: 20px;
             text-align: center;
+
             @media (max-width:450px) {
                 font-size: 15px;
             }
         }
 
         @media (max-width: 450px) {
-            padding-top:30px;
+            padding-top: 30px;
         }
     }
+
     &__postschoice {
         margin-top: 79px;
         display: flex;
         justify-content: space-around;
+
         &-item {
             width: 30%;
             display: flex;
             justify-content: center;
             border-bottom: 2px solid #E2E3E6;
+            cursor: pointer;
+
             p {
                 color: #7B7C8E;
-    font-weight: 600;
-    padding-bottom: 8px;
+                font-weight: 600;
+                padding-bottom: 8px;
             }
 
             &.active {
                 border-bottom: 2px solid #00AEEF;
+
                 p {
                     color: black;
-        font-weight: 600;
+                    font-weight: 600;
                 }
             }
         }
@@ -73,7 +81,7 @@
         margin-right: auto;
         margin-left: auto;
 
-        @media (max-width: 900px) {
+        @media (max-width: 1150px) {
             justify-content: center;
         }
 
@@ -81,64 +89,81 @@
             position: relative;
             width: 544px;
             margin-top: 32px;
+            .spacer {
+                position: absolute;
+                bottom: 0;
+                right: -20px;
+                width: 40px;
+                height: 100%;
+                background: white;
+                z-index: 100;
             
+            }
+
         }
 
         &-box {
+            position: absolute;
+            bottom: 0;
+            right: -1px;
+            background: white;
+            padding: 32px;
+            height: 200px;
+            width: 350px;
+
+            p {
+                font-size: 10px;
+                font-weight: 600;
+                text-transform: uppercase;
+                color: #7B7C8E;
+            }
+
+            .more a {
+                display: flex;
+                font-size: 14px;
+                align-items: center;
+                color: #00AEEF;
                 position: absolute;
-                bottom:0;
-                right:-1px;
-                background: white;
-                padding: 32px;
-                height: 200px;
-                width: 350px;
-                p {
-                    font-size: 10px;
-                    font-weight: 600;
-                    text-transform: uppercase;
-                    color: #7B7C8E;
+                cursor: pointer;
+                text-decoration: none;
+                font-weight: 700;
+
+                bottom: 22px;
+
+                img {
+                    margin-left: 5px;
+
+                    width: 26px;
+
                 }
-                .more a {
-                    display: flex;
-                    font-size: 14px;
-                    align-items: center;
-                    color: #00AEEF;
-                    position: absolute;
-                    cursor:pointer;
-                        text-decoration: none;
-                        font-weight: 700;
-    
-        bottom: 22px;
-                    img {
-                        margin-left: 5px;
-                        
-        width: 26px;
-    
-                    }
-                }
-                h3 {
-                    font-weight: 600;
-                    color: #181A31;
-                    margin-top: 20px;
-                }
-                h5 {
-                    color: #7B7C8E;
-                    font-size: 14px;
-                    font-weight: 700;
-                }
-                
-            
+            }
+
+            h3 {
+                font-weight: 600;
+                color: #181A31;
+                margin-top: 20px;
+            }
+
+            h5 {
+                color: #7B7C8E;
+                font-size: 14px;
+                font-weight: 700;
+            }
+
+
         }
 
         &-boxhead {
             display: flex;
-            p.title{
+
+            p.title {
                 border-right: 1px solid #7B7C8E;
-    padding-right: 15px;
-    height: 13px;
+                padding-right: 15px;
+                height: 13px;
             }
+
             p.date {
-                margin-left:15px;
+                margin-left: 15px;
             }
         }
     }
