--- a/assets/scss/app/elements/_main-banner.scss
+++ b/assets/scss/app/elements/_main-banner.scss
@@ -217,6 +217,9 @@
     left: 50%;
     transform: translateX(-50%);
     width: auto;
+    position: static;
+    margin-left: 50%;
+ 
         }
         
 
