--- a/assets/scss/app/elements/_header.scss
+++ b/assets/scss/app/elements/_header.scss
@@ -4,18 +4,34 @@
     margin: 0;
     font-family: 'Poppins', sans-serif;
 }
+.acf-map {
+    width: 100%;
+    height: 400px;
+    border: #ccc solid 1px;
+    margin: 20px 0;
+}
 
+// Fixes potential theme css conflict.
+.acf-map img {
+   max-width: inherit !important;
+}
 .app-container {
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    overflow: hidden;
-    padding-top: 25px;
+    overflow-x: hidden;   
+    width: 100%;
+   
 
     &.sticky {
-        padding-top: 110px;
+        padding-top: 90px;
     }
 
+    @media screen and (max-width: 768px) {
+        body {
+            overflow: hidden!important;
+        }
+    }
 }
 
 
