--- a/assets/scss/app/elements/_front-aboutus.scss
+++ b/assets/scss/app/elements/_front-aboutus.scss
@@ -13,6 +13,12 @@
         margin-left: auto;
         margin-right: auto;        
     padding-top: 148px;
+    overflow: hidden;
+
+    @media (max-width:1100px) {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
 
     @media (max-width: 900px) {
         padding-top: 70px;
@@ -39,9 +45,16 @@
                 justify-content: center;
                 font-size: 16px;
                 margin-top: 48px;
-                transition: 0.5s ease all;
+               
+                transition: 1s ease all;
                 text-decoration: none;
-            
+                
+
+                &:hover {
+
+                    border: 1px solid #00AEEF;
+                    background: transparent;
+                }
                 img {
                     width: 28px;
                     margin-left: 5px;
@@ -75,12 +88,52 @@
     }
 
     &__image {
-
+        position: relative;
+        overflow: hidden;
         @media (max-width:900px) {
             display: none;
         }
+a {
+    z-index: 105;
+}
+
         img {
             height: 100%;
+            width: 100%;
+            object-fit: cover;
+            transition: 1s;
+        }
+
+     
+
+        &:hover {
+            img {
+            height: 95%;
+                width: 105%;
+                object-fit: cover;
+            }
+        }
+
+        &::after {
+            content: '';
+            width: 100%;
+            display: block;
+            height: 100%;
+            z-index: 100;
+            background-color: #00000000;
+            transition: 1s ease all;
+            position: absolute;
+            top:0;
+            left:0;
+        }
+        &:hover {
+            background-size: 110%;
+            transition: 1s ease all;
+            &::after {
+
+                background-color: #0000006b
+
+            }
         }
     }
 }
