--- a/assets/scss/app/elements/_front-clients.scss
+++ b/assets/scss/app/elements/_front-clients.scss
@@ -10,6 +10,10 @@
     }
 
     &__header {
+        a {
+            color:black;
+        }
+
         h2 {
             font-size: 48px;
             text-transform: uppercase;
@@ -53,12 +57,28 @@
             height: 48px;
             justify-content:center;
             font-size: 16px;
-            transition: 0.5s ease all;
             border: 1px black solid;
-            text-decoration: none;
+            transition: 1s ease all;
+            overflow: hidden;
+         
+                
+    
+
             img {
                 width: 28px;
                 margin-left: 5px;
+                transition: 1s;
+            }
+            
+            &:hover {
+                color:#00AEEF;
+                border: 1px solid #00AEEF;
+                background: transparent;
+                padding-left: 30px;
+    
+                img {
+                    transform: translateX(100px);
+                }
             }
         }
     }
