--- a/assets/scss/app/elements/_front-investorzone.scss
+++ b/assets/scss/app/elements/_front-investorzone.scss
@@ -1,9 +1,6 @@
 .investorzone {
-    margin-top: 128px;
 
-    @media (max-width: 750px) {
-        margin-top: 40px;
-      }
+
               
 
     &__topbuttons {
@@ -18,19 +15,21 @@
 
         &-item {
             width: 50vw;
-            height: 480px;
+            height: 445px;
             position: relative;
-            transition: 0.6s ease all;
-            background-size: 100%;
-@media (max-width: 750px) {
-    width: 100vw;
-}
+            transition: 1s ease all;
+            background-size: 105%;
+            background-repeat: no-repeat;
+                @media (max-width: 750px) {
+                    width: 100vw;
+                }
+
+                @media (max-width:1270px) {
+                    background-size: cover;
+                }
+                        
+
           
-
-            &:hover {
-                background-size: 110%;
-            }
-
 
             &:hover .investorzone__topbuttons-header p {
                 text-decoration: underline;
@@ -41,6 +40,24 @@
                 visibility: visible;
             }
 
+            &::after {
+                content: '';
+                width: 100%;
+                display: block;
+                height: 100%;
+                z-index: 100;
+                background-color: #00000000;
+                transition: 1s ease all;
+            }
+            &:hover {
+                background-size: 110%;
+                transition: 1s ease all;
+                &::after {
+    
+                    background-color: #0000006b
+    
+                }
+            }
 
         }
 
@@ -121,10 +138,14 @@
         padding-bottom: 130px;
         padding-top: 64px;
 
-        @media (max-width: 750px) {
+       
+        @media (max-width: 900px) {
            flex-direction: column;
             align-items: center;
             padding-bottom: 40px;
+            a {
+                width: 100%;
+            }
          }
                  
 
@@ -133,20 +154,45 @@
             width: 544px;
             height: 472px;
             position: relative;
+            background-size: 100%;
+            transition: 1s ease all;
 
             @media (max-width: 450px) {
               width: 100%;
                 height: 400px;
              }
+             &::after {
+                content: '';
+                width: 100%;
+                display: block;
+                height: 100%;
+                z-index: 10;
+                background-color: #00000000;
+                transition: 1s ease all;
+                position: absolute;
+                top:0;
+                left: 0;
+            }
+            &:hover {
+                background-size: 110%;
+                transition: 1s ease all;
+                &::after {
+    
+                    background-color: #0000006b
+    
+                }
+            }
         }
 
         &-icon {
-
-            margin-left: 63px;
-            margin-top: 63px;
+position: relative;
+            left: 63px;
+            top: 63px;
+            z-index: 11;
 
             img {
                 width: 100px;
+                z-index: 11;
             }
         }
 
@@ -154,7 +200,7 @@
             position: absolute;
             bottom: 64px;
             left: 64px;
-
+            z-index: 11;
             p {
                 font-size: 35px;
                 color: white;
@@ -165,7 +211,7 @@
                    }
             }
 
-            a {
+            div {
                 cursor: pointer;
                 border: 0;
                 background: #00AEEF;
@@ -177,8 +223,15 @@
                 justify-content: space-evenly;
                 font-size: 16px;
                 margin-top: 25px;
-                transition: 0.5s ease all;
+                transition: 1s ease all;
                 text-decoration: none;
+                
+
+                &:hover {
+
+                    border: 1px solid #00AEEF;
+                    background: transparent;
+                }
             }
 
             img {
