--- a/assets/scss/app/elements/_front-news.scss
+++ b/assets/scss/app/elements/_front-news.scss
@@ -14,6 +14,9 @@
         @media (max-width: 500px) {
             margin-bottom: 30px;
         }
+        a {
+            color:black;
+        }
 
         h2 {
             font-size: 48px;
@@ -56,10 +59,22 @@
             position: relative;
             height: 640px;
             margin-top: 64px;
+            margin-left: 100px;
+            color:black;
+        
+        
+            @media (max-width:650px) {
+                margin-left: 30px;
 
+            }
             @media (max-width: 500px) {
                 margin-top: 0px;
+                margin-left: 0;
             }
+         
+            
+
+           
 
             
 
@@ -86,13 +101,24 @@
                 width: 480px;
                 height: 280px;
                 object-fit: cover;
+                transition: 1s;
+            }
+
+            overflow: hidden;
+
+            &:hover {
+                img {
+                    height: 290px;
+                    width: 490px;
+                    object-fit: cover;
+                }
             }
         }
 
         &-button {
             margin-top: 36px;
 
-            a {
+            div {
                 display: flex;
                 font-size: 16px;
                 align-items: center;
@@ -158,13 +184,28 @@
             height: 48px;
             justify-content: center;
             font-size: 16px;
-            transition: 0.5s ease all;
             border: 1px black solid;
-            text-decoration: none;
+            transition: 1s ease all;
+            overflow: hidden;
+         
+                
+    
 
             img {
                 width: 28px;
                 margin-left: 5px;
+                transition: 1s;
+            }
+            
+            &:hover {
+                color:#00AEEF;
+                border: 1px solid #00AEEF;
+                background: transparent;
+                padding-left: 30px;
+    
+                img {
+                    transform: translateX(100px);
+                }
             }
         }
     }
