--- a/assets/scss/app/elements/_main-banner.scss
+++ b/assets/scss/app/elements/_main-banner.scss
@@ -13,7 +13,7 @@
 .main-banner {
     display: flex;
     justify-content: space-between;
-    left: 50%;
+    left: 45%;
     max-width: 1100px;
     position: relative;
     transform: translateX(-50%);
@@ -76,6 +76,12 @@
             display: flex;
             align-items: end;
 
+            a {
+                display: flex;
+    align-items: flex-end;
+    text-decoration: none;
+            }
+
             p {
                 color: #838490;
                 font-size: 14px;
@@ -94,7 +100,9 @@
         }
 
         &-button {
-
+a {
+    text-decoration: none;
+}
             button {
                 cursor: pointer;
                 border: 0;
@@ -147,6 +155,7 @@
             left: 54px;
             height: 200px;
             min-width: 325px;
+            max-width: 375px;
 
             p {
                 font-size: 10px;
@@ -211,8 +220,11 @@
         bottom: 10px;
         width: 140px;
         justify-content: space-between;
+        padding-left: 50px;
+        
 
         @media (max-width:750px) {
+            padding-left: 0;
             bottom: -30px;
     left: 50%;
     transform: translateX(-50%);
