--- a/assets/scss/app/elements/_template-news.scss
+++ b/assets/scss/app/elements/_template-news.scss
@@ -13,6 +13,7 @@
         object-fit: cover;
         height: 65%;
     }
+  
     h1 {
         font-size: 65px;
         color:white;
@@ -49,7 +50,14 @@
     padding: 32px;
     right: 54px;
     height: 200px;
-    min-width: 325px;
+    max-width: 325px;
+    margin-right: 100px;
+
+    @media (max-width:1000px) {
+
+        margin-right: 0;
+    }
+
     @media (max-width:720px) {
 
         top:350px;
@@ -112,6 +120,7 @@
             display: flex;
             justify-content: center;
             border-bottom: 2px solid #E2E3E6;
+            cursor: pointer;
 
             p {
                 color: #7B7C8E;
@@ -137,7 +146,10 @@
             display: flex;
             justify-content: space-between;
             flex-wrap: wrap;
-    
+            margin-left: 10px;
+           
+            
+         
     
     
             @media (max-width:900px) {
@@ -146,7 +158,7 @@
             }
     
             &-item {
-                width: 352px;
+                width: 380px;
                 position: relative;
                 height: 640px;
                 margin-top: 64px;
@@ -155,6 +167,17 @@
                     margin-top: 30px;
                     width: 300px;
 
+                }
+
+                .spacer {
+                    position: absolute;
+                    bottom: 0;
+                    right: -10px;
+                    width: 30px;
+                    height: 100%;
+                    background: white;
+                    z-index: 100;
+                
                 }
     
                 
@@ -177,17 +200,30 @@
             }
     
             &-image {
+        
+
                 img {
                     width: 100%;
                     height: 280px;
                     object-fit: cover;
+                    transition: 1s;
+                }
+    
+                overflow: hidden;
+    
+                &:hover {
+                    img {
+                        height: 290px;
+                        width: 105%;
+                        object-fit: cover;
+                    }
                 }
             }
     
             &-button {
                 margin-top: 36px;
     
-                a {
+                div{
                     display: flex;
                     font-size: 16px;
                     align-items: center;
@@ -219,8 +255,8 @@
                 max-width: 350px;
                 font-size: 24px;
                 font-weight: 600;
-
-
+         
+                color:black;
                 @media (max-width:700px) {
                     font-size: 15px;;
                 }
