--- a/assets/scss/app/elements/_zone.scss
+++ b/assets/scss/app/elements/_zone.scss
@@ -58,6 +58,9 @@
 
                 li {
                     padding: 0px 20px;
+                    img {
+                        max-width: 180px;
+                    }
                 }
             }
         }
