--- a/assets/scss/app/elements/_aboutus.scss
+++ b/assets/scss/app/elements/_aboutus.scss
@@ -165,6 +165,7 @@ a {
             img {
                 width: 100%;
                 object-fit: contain;
+                max-height: 600px;
                 @media (max-width:850px) {
                     object-fit: cover;
         
